--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; /* slate-800 */
+        background: #f1f5f9; /* slate-100 */
       }
       ::-webkit-scrollbar-thumb {
-        background: #4f46e5; /* indigo-600 */
+        background: #cbd5e1; /* slate-300 */
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #6366f1; /* indigo-500 */
+        background: #94a3b8; /* slate-400 */
       }
     </style>
   <script type="importmap">
@@ -33,7 +33,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900">
+  <body class="bg-gray-50 text-slate-900">
     <div id="root"></div>
   </body>
 </html>
